k8s/mariadb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1-mariadb
spec:
  selector:
    matchLabels:
      app: p1-mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: p1-mariadb
    spec:
      containers:
      - image: mariadb
        name: p1-mariadb
        ports:
        - containerPort: 3306
          name: p1-mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mariadb
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
