k8s/recents-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recent-pastes
  labels:
    app: recent-pastes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recent-pastes
  template:
    metadata:
      labels:
        app: recent-pastes
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p1-suhavni/backend
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
