k8s/backend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: p1-backend
spec:
  selector:
    app: p1-backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
