k8s/mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: p1-mariadb
spec:
  ports:
  - port: 3306
  selector:
    app: p1-mariadb
