k8s/recents-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: recent-pastes
spec:
  selector:
    app: recent-pastes
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
